Add comment to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>River City Flooring, Inc.</title>
+<!-- This site is serving off of GitHub, yay! -->
 <style type="text/css">
 <!--
 body {
