Update phone numbers on contact page

--- a/Contact.html
+++ b/Contact.html
@@ -200,12 +200,12 @@ function out(imgName, id)
 <div id="apDiv12"><a href="Samples.html"><img src="Media/samples.jpg" id="img12" border=0 alt="samples" width="194" height="39" onmouseover="over('samples', id)" onmouseout="out('samples', id)"/></a></div>
 <div id="apDiv13"><a href="Contact.html"><img src="Media/contact.jpg" id="img13" border=0 alt="contact" width="194" height="110" onmouseover="over('contact', id)" onmouseout="out('contact', id)"/></a></div>
 <div id="apDiv17">
-  <h4 class="style1">Office: 804-561-2588 </h4>
-  <h4 class="style1">Fax: 804-561-2478</h4>
+  <h4 class="style1">Office: <a href="tel:+18045612588">804-561-2588</a> </h4>
+  <h4 class="style1">Fax: <a href="tel:+18045612478">804-561-2478</a></h4>
   <h4 class="style1">Email: <a href="rivercityfloor09@gmail.com">rivercityfloor09@gmail.com</a></h4>
   <p align="justify" class="style1">What to do now!<br />
     If you should choose to contract with River City Flooring, Inc., you need to do the following:<br />
-    1.	Call our office at 739-4037 to schedule a day that suits your schedule but giving us approximately two to three weeks lead-time. Once scheduled we cannot guarantee a time for each day and the time may vary from day to day. Just call our office and we will try to give you an approximate time.<br />
+    1.	Call our office at <a href="tel:+18045612588">804-561-2588</a> to schedule a day that suits your schedule but giving us approximately two to three weeks lead-time. Once scheduled we cannot guarantee a time for each day and the time may vary from day to day. Just call our office and we will try to give you an approximate time.<br />
     2.	Please read all the information that we have provided to you in this “For Your Information” sheet.<br />
     3.	Sign and return your typed estimate (which you should be receiving within the next few days) along with your 50% deposit. This need to be sent to us prior to your scheduled date or your scheduled time may be cancelled.<br />
     4.	Upon completion of the job:<br />
